// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar basic usage with ActionBar.Icon 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarIcon
      icon="chat-o"
      index={0}
      key=".0"
      text="客服"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          name="chat-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-chat-o"
            showZero={true}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
              style={
                Object {
                  "color": undefined,
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        客服
      </div>
    </ActionBarIcon>
    <ActionBarIcon
      icon="cart-o"
      index={1}
      key=".1"
      text="购物车"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          name="cart-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-cart-o"
            showZero={true}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
              style={
                Object {
                  "color": undefined,
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        购物车
      </div>
    </ActionBarIcon>
    <ActionBarIcon
      icon="shop-o"
      index={2}
      key=".2"
      text="店铺"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          name="shop-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-shop-o"
            showZero={true}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-shop-o"
              style={
                Object {
                  "color": undefined,
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        店铺
      </div>
    </ActionBarIcon>
    <ActionBarButton
      index={3}
      key=".3"
      text="立即购买"
      type="danger"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-action-bar-button--first"
        iconPosition="left"
        size="large"
        tag="button"
        type="danger"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-action-bar-button--first rc-button rc-button--danger rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              立即购买
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
  </div>
</ActionBar>
`;

exports[`ActionBar should allow to disable safe-area-inset-bottom prop 1`] = `"<div class=\\"rc-action-bar\\"><div role=\\"button\\" class=\\"rc-action-bar-icon\\" tabindex=\\"0\\"><div class=\\"rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o\\"></div>客服</div><div role=\\"button\\" class=\\"rc-action-bar-icon\\" tabindex=\\"0\\"><div class=\\"rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o\\"></div>购物车</div><div role=\\"button\\" class=\\"rc-action-bar-icon\\" tabindex=\\"0\\"><div class=\\"rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-shop-o\\"></div>店铺</div></div>"`;

exports[`ActionBar should render correctly when color prop in ActionBarIcon 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarIcon
      color="#ee0a24"
      icon="chat-o"
      index={0}
      key=".0"
      text="客服"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          color="#ee0a24"
          name="chat-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-chat-o"
            showZero={true}
            style={
              Object {
                "color": "#ee0a24",
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
              style={
                Object {
                  "color": "#ee0a24",
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        客服
      </div>
    </ActionBarIcon>
    <ActionBarIcon
      icon="cart-o"
      index={1}
      key=".1"
      text="购物车"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          name="cart-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-cart-o"
            showZero={true}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
              style={
                Object {
                  "color": undefined,
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        购物车
      </div>
    </ActionBarIcon>
    <ActionBarIcon
      color="#ff5000"
      icon="star"
      index={2}
      key=".2"
      text="店铺"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          color="#ff5000"
          name="star"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-star"
            showZero={true}
            style={
              Object {
                "color": "#ff5000",
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-star"
              style={
                Object {
                  "color": "#ff5000",
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        店铺
      </div>
    </ActionBarIcon>
  </div>
</ActionBar>
`;

exports[`ActionBar should render correctly when icon prop in ActionBarIcon 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarIcon
      color="#ee0a24"
      icon="chat-o"
      index={0}
      key=".0"
      text="客服"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          className="rc-action-bar-icon__icon"
          color="#ee0a24"
          name="chat-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-chat-o"
            showZero={true}
            style={
              Object {
                "color": "#ee0a24",
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
              style={
                Object {
                  "color": "#ee0a24",
                  "fontSize": undefined,
                }
              }
            />
          </Badge>
        </Icon>
        客服
      </div>
    </ActionBarIcon>
    <ActionBarIcon
      icon={
        <Icon
          name="shop-o"
          tag="i"
        />
      }
      index={1}
      key=".1"
      text="购物车"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Badge
          className="rc-action-bar-icon__icon"
          showZero={true}
          tag="div"
        >
          <div
            className="rc-badge__wrapper rc-action-bar-icon__icon"
          >
            <Icon
              name="shop-o"
              tag="i"
            >
              <Badge
                className="van-icon van-icon-shop-o"
                showZero={true}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": undefined,
                  }
                }
                tag="i"
              >
                <i
                  className="rc-badge__wrapper van-icon van-icon-shop-o"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                />
              </Badge>
            </Icon>
          </div>
        </Badge>
        购物车
      </div>
    </ActionBarIcon>
  </div>
</ActionBar>
`;

exports[`ActionBar should render correctly when using badge prop in ActionBarIcon 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarIcon
      badge={
        Object {
          "dot": true,
        }
      }
      icon="chat-o"
      index={0}
      key=".0"
      text="客服"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          badge={
            Object {
              "dot": true,
            }
          }
          className="rc-action-bar-icon__icon"
          name="chat-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-chat-o"
            dot={true}
            showZero={true}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-chat-o"
              style={
                Object {
                  "color": undefined,
                  "fontSize": undefined,
                }
              }
            >
              <div
                className="rc-badge rc-badge--dot rc-badge--fixed"
                style={
                  Object {
                    "background": undefined,
                  }
                }
              />
            </div>
          </Badge>
        </Icon>
        客服
      </div>
    </ActionBarIcon>
    <ActionBarIcon
      badge={
        Object {
          "content": 5,
        }
      }
      icon="cart-o"
      index={1}
      key=".1"
      text="购物车"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <Icon
          badge={
            Object {
              "content": 5,
            }
          }
          className="rc-action-bar-icon__icon"
          name="cart-o"
          tag="div"
        >
          <Badge
            className="rc-action-bar-icon__icon van-icon van-icon-cart-o"
            content={5}
            showZero={true}
            style={
              Object {
                "color": undefined,
                "fontSize": undefined,
              }
            }
            tag="div"
          >
            <div
              className="rc-badge__wrapper rc-action-bar-icon__icon van-icon van-icon-cart-o"
              style={
                Object {
                  "color": undefined,
                  "fontSize": undefined,
                }
              }
            >
              <div
                className="rc-badge rc-badge--fixed"
                style={
                  Object {
                    "background": undefined,
                  }
                }
              >
                5
              </div>
            </div>
          </Badge>
        </Icon>
        购物车
      </div>
    </ActionBarIcon>
  </div>
</ActionBar>
`;

exports[`ActionBar should render correctly when using color prop in ActionBarButton 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarButton
      color="red"
      index={0}
      key=".0"
      text="加入购物车"
      type="warning"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first"
        color="red"
        iconPosition="left"
        size="large"
        tag="button"
        type="warning"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
          onClick={[Function]}
          style={
            Object {
              "background": "red",
              "borderColor": "red",
              "color": "#fff",
            }
          }
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              加入购物车
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
    <ActionBarButton
      color="linear-gradient(to right, #ffd01e, #ff8917)"
      index={1}
      key=".1"
      text="立即购买"
      type="danger"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last"
        color="linear-gradient(to right, #ffd01e, #ff8917)"
        iconPosition="left"
        size="large"
        tag="button"
        type="danger"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
          onClick={[Function]}
          style={
            Object {
              "background": "linear-gradient(to right, #ffd01e, #ff8917)",
              "border": 0,
              "color": "#fff",
            }
          }
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              立即购买
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
  </div>
</ActionBar>
`;

exports[`ActionBar should render correctly when using icon prop in ActionBarButton 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarButton
      icon="shop-o"
      index={0}
      key=".0"
      text="加入购物车"
      type="warning"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first"
        icon="shop-o"
        iconPosition="left"
        size="large"
        tag="button"
        type="warning"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <Icon
              className="rc-button__icon"
              name="shop-o"
              tag="i"
            >
              <Badge
                className="rc-button__icon van-icon van-icon-shop-o"
                showZero={true}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": undefined,
                  }
                }
                tag="i"
              >
                <i
                  className="rc-badge__wrapper rc-button__icon van-icon van-icon-shop-o"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                />
              </Badge>
            </Icon>
            <span
              className="rc-button__text"
              key="text"
            >
              加入购物车
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
    <ActionBarButton
      icon={
        <Icon
          name="chat-o"
          tag="i"
        />
      }
      index={1}
      key=".1"
      text="立即购买"
      type="danger"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last"
        icon={
          <Icon
            name="chat-o"
            tag="i"
          />
        }
        iconPosition="left"
        size="large"
        tag="button"
        type="danger"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <Icon
              name="chat-o"
              tag="i"
            >
              <Badge
                className="van-icon van-icon-chat-o"
                showZero={true}
                style={
                  Object {
                    "color": undefined,
                    "fontSize": undefined,
                  }
                }
                tag="i"
              >
                <i
                  className="rc-badge__wrapper van-icon van-icon-chat-o"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                />
              </Badge>
            </Icon>
            <span
              className="rc-button__text"
              key="text"
            >
              立即购买
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
  </div>
</ActionBar>
`;

exports[`ActionBar should render correctly when using type prop and text prop in ActionBarButton 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarButton
      index={0}
      key=".0"
      text="加入购物车"
      type="warning"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first"
        iconPosition="left"
        size="large"
        tag="button"
        type="warning"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              加入购物车
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
    <ActionBarButton
      index={1}
      key=".1"
      text="立即购买"
      type="danger"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last"
        iconPosition="left"
        size="large"
        tag="button"
        type="danger"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              立即购买
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
  </div>
</ActionBar>
`;

exports[`ActionBar when ActionBarButton does not wrapperd by ActionBar 1`] = `
<div>
  <ActionBarButton
    text="加入购物车"
    type="warning"
  >
    <Button
      className="rc-action-bar-button rc-action-bar-button--warning"
      iconPosition="left"
      size="large"
      tag="button"
      type="warning"
    >
      <button
        className="rc-action-bar-button rc-action-bar-button--warning rc-button rc-button--warning rc-button--large"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="rc-button__content"
        >
          <span
            className="rc-button__text"
            key="text"
          >
            加入购物车
          </span>
        </div>
      </button>
    </Button>
  </ActionBarButton>
  <ActionBarButton
    text="立即购买"
    type="danger"
  >
    <Button
      className="rc-action-bar-button rc-action-bar-button--danger"
      iconPosition="left"
      size="large"
      tag="button"
      type="danger"
    >
      <button
        className="rc-action-bar-button rc-action-bar-button--danger rc-button rc-button--danger rc-button--large"
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="rc-button__content"
        >
          <span
            className="rc-button__text"
            key="text"
          >
            立即购买
          </span>
        </div>
      </button>
    </Button>
  </ActionBarButton>
</div>
`;

exports[`ActionBar when ActionBarButton has children 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarButton
      index={0}
      key=".0"
      type="warning"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first"
        iconPosition="left"
        size="large"
        tag="button"
        type="warning"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--warning rc-action-bar-button--first rc-button rc-button--warning rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              加入购物车
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
    <ActionBarButton
      index={1}
      key=".1"
      type="danger"
    >
      <Button
        className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last"
        iconPosition="left"
        size="large"
        tag="button"
        type="danger"
      >
        <button
          className="rc-action-bar-button rc-action-bar-button--danger rc-action-bar-button--last rc-button rc-button--danger rc-button--large"
          onClick={[Function]}
          style={Object {}}
        >
          <div
            className="rc-button__content"
          >
            <span
              className="rc-button__text"
              key="text"
            >
              立即购买
            </span>
          </div>
        </button>
      </Button>
    </ActionBarButton>
  </div>
</ActionBar>
`;

exports[`ActionBar when icon prop in ActionBarIcon is not isValidElement 1`] = `
<ActionBar
  safeAreaInsetBottom={true}
>
  <div
    className="rc-action-bar rc-safe-area-bottom"
  >
    <ActionBarIcon
      color="#ee0a24"
      icon={123}
      index={0}
      key=".0"
      text="客服"
    >
      <div
        className="rc-action-bar-icon"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        客服
      </div>
    </ActionBarIcon>
  </div>
</ActionBar>
`;
